# chunking-strategies-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
chunking_lab/: __init__.py  corpus.py  embedder.py  io_utils.py  metrics.py  queries.py  validate.py
chunking_lab/strategies/: __init__.py  fixed.py  late.py  recursive.py  semantic.py  structure.py
data/: queries.jsonl
data/corpus/: 01_hnsw.md  02_rrf.md  03_prompt_caching.md  04_eval_harness.md  05_async_pipelines.md
docs/: architecture.md  setup.md
notebooks/: _build_notebook.py  comparison.ipynb
results/: canonical__fixed-size.json  canonical__late-chunking.json  canonical__recursive.json  canonical__semantic.json  canonical__structure-aware.json  summary.md
scripts/: capture_demo.sh  run_matrix.py
tests/: test_architecture_doc.py  test_build_notebook_snapshot.py  test_canonical_fixture_freshness.py  test_capture_demo_smoke.py  test_corpus.py  test_cosine_finiteness.py  test_io_utils_atomic_write.py  test_metrics.py  test_notebook.py  test_public_surface.py  test_readme_snapshot.py  test_run_matrix_strategy_filter.py  test_strategies.py  test_summary_snapshot.py  test_validate.py  test_workflows_concurrency.py  test_workflows_timeout_minutes.py  test_workflows_yaml_parseable.py
